# game-engine

./: CMakeLists.txt  main.cpp
core/: Core.cpp  Core.h  core.h
game_engine/: core.cpp  core.h
game_engine/gameobject/: gameobject.cpp
game_engine/gameobject/components/: component.h  playercontroller.h
game_engine/gameobject/components/graphics/: animation_renderer.h  tile_map_renderer.h  tilemaprenderer.h
game_engine/gameobject/components/physics/: kinematic_body.h  tile_map_collider.h
game_engine/resources/: animation.h  tile.h  tilemap.h
gameobject/: GameObject.cpp  GameObject.h  gameobject.h
gameobject/components/: Component.cpp  Component.h  PlayerController.h  component.cpp
gameobject/components/graphics/: spriterenderer.h  tilemaprenderer.h
